--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -68,7 +68,7 @@
 <script>
 
 
-var map = L.map('map').setView([45.642, 8.954], 14);
+var map = L.map('map','lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
 var ui = document.getElementById('map-ui');
 
 addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
