--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -70,6 +70,13 @@
 
 var map = L.mapbox.map('map','lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
 var ui = document.getElementById('map-ui');
+    
+    //Center map on click
+    var map = L.mapbox.map('map', 'examples.map-zr0njcqy');
+
+    map.featureLayer.on('click', function(e) {
+        map.panTo(e.layer.getLatLng());
+    });
 
 addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14 KM', 2);
