--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -71,12 +71,8 @@
 var map = L.mapbox.map('map','lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
 var ui = document.getElementById('map-ui');
     
-    //Center map on click
-    map.featureLayer.on('click', function(e) {
-        map.panTo(e.layer.getLatLng());
-    });
-
-addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
+//addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
+addLayer(L.mapbox.tileLayer('lucamoiana.hmm1l36n'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14 KM', 2);
 addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), '20 KM', 1);
 
