--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -75,6 +75,7 @@ var ui = document.getElementById('map-ui');
  
     
 //addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
+addLayer(L.mapbox.tileLayer(''), 'Meteo', 4);
 addLayer(L.mapbox.tileLayer('lucamoiana.hmm1l36n'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14 KM', 2);
 addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), '20 KM', 1);
