--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -68,9 +68,10 @@
 <div id='map'></div>
 <script>
 
-
+var city = new OpenLayers.Layer.Vector.OWMWeather("Weather");
 var map = L.mapbox.map('map','lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
 var ui = document.getElementById('map-ui');
+
 
  
 
@@ -81,7 +82,7 @@ var ui = document.getElementById('map-ui');
 //addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
 
 
-//addLayer(L.mapbox.addLayer(OsmJs.Weather.LeafletLayer({lang: 'ru'}), 'Meteo', 4);
+addLayer(L.mapbox.addLayer(city), 'Meteo', 4);
 addLayer(L.mapbox.tileLayer('lucamoiana.hmm1l36n'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14 KM', 2);
 addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), '20 KM', 1);
