--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -83,7 +83,7 @@ var ui = document.getElementById('map-ui');
 
 
 
-addLayer(L.mapbox.tileLayer('lucamoiana.hmm1l36n'), '6 KM', 3);
+addLayer(L.mapbox.tileLayer('lucamoiana.corto_2014'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14 KM', 2);
 addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), '20 KM', 1);
 
