--- a/markers.html
+++ b/markers.html
@@ -31,7 +31,7 @@ var geoJson = {
         },
         geometry: {
             type: 'Point',
-            coordinates: [-77.03201, 38.90065]
+            coordinates: [45.64008765934397, 8.965272903442383]
         }
     },
     {
@@ -41,7 +41,7 @@ var geoJson = {
         },
         geometry: {
             type: 'Point',
-            coordinates: [-76.60767, 39.28755]
+            coordinates: [45.641587880901234, 8.954200744628906]
         }
     }]
 };
