--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -84,8 +84,8 @@ var ui = document.getElementById('map-ui');
 
 
 addLayer(L.mapbox.tileLayer('lucamoiana.i057npjm'), '6 KM', 3);
-addLayer(L.mapbox.tileLayer('lucamoiana.medio_2014'), '14 KM', 2);
-addLayer(L.mapbox.tileLayer('lucamoiana.lungo_2014'), '20 KM', 1);
+addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 KM', 2);
+addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), '20 KM', 1);
 
 function addLayer(layer, name, zIndex) {
     layer
