--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -83,7 +83,7 @@ var ui = document.getElementById('map-ui');
 
 
 
-addLayer(L.mapbox.tileLayer('lucamoiana.i09fgicl'), 'Ristori', 4);
+addLayer(L.mapbox.tileLayer('lucamoiana.ristori'), 'Ristori', 4);
 addLayer(L.mapbox.tileLayer('lucamoiana.i09fgicl'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 KM', 2);
 addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), '20 KM', 1);
