--- a/mapbox_2.html
+++ b/mapbox_2.html
@@ -80,6 +80,8 @@ var ui = document.getElementById('map-ui');
  
     
 //addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
+
+addLayer(L.layerGroup('lucamoiana.i057npjm'), 'Group', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.i057npjm'), '6 KM', 3);
 addLayer(L.mapbox.featureLayer('lucamoiana.i057npjm'), '6 KM', 3);
 addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 KM', 2);
