--- a/5mdr.html
+++ b/5mdr.html
@@ -69,7 +69,7 @@
 <script>
 
 
-var map = L.mapbox.map('map','lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
+var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14);
 var ui = document.getElementById('map-ui');
 
 
