--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -17,107 +17,17 @@
 <body>
 
 
-<style>
-#map-ui {
-    position: absolute;
-    top: 75px;
-    left: 10px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    z-index: 100;
-}
-
-#map-ui a {
-    font: normal 13px/18px 'Helvetica Neue', Helvetica, sans-serif;
-    background: #FFF;
-    color: #3C4E5A;
-    display: block;
-    margin: 0;
-    padding: 0;
-    border: 1px solid #BBB;
-    border-bottom-width: 0;
-    min-width: 138px;
-    padding: 10px;
-    text-decoration: none;
-}
-
-#map-ui a:hover {
-    background: #ECF5FA;
-}
-
-#map-ui li:last-child a {
-    border-bottom-width: 1px;
-    -webkit-border-radius: 0 0 3px 3px;
-    border-radius: 0 0 3px 3px;
-}
-
-#map-ui li:first-child a {
-    -webkit-border-radius: 3px 3px 0 0;
-    border-radius: 3px 3px 0 0;
-}
-
-#map-ui a.active {
-    background: #3887BE;
-    border-color: #3887BE;
-    border-top-color: #FFF;
-    color: #FFF;
-}
-</style>
-<ul id='map-ui'></ul>
 <div id='map'></div>
 <script>
+var map = L.map('map').setView([38.902, -77.001], 13);
 
-
-var map = L.mapbox.map('map','lucamoiana.hm3p5lg6').setView([45.642, 8.954], 14);
-var ui = document.getElementById('map-ui');
-
-
- 
-
-
- 
- 
-    
-//addLayer(L.mapbox.tileLayer('lucamoiana.MdR2014'), '6 KM', 3);
-
-
-
-addLayer(L.mapbox.tileLayer('lucamoiana.ristori'), 'Ristori', 4);
-addLayer(L.mapbox.tileLayer('lucamoiana.i09fgicl'), '6 KM', 3);
-addLayer(L.mapbox.tileLayer('lucamoiana.i0588kkf'), '14 KM', 2);
-addLayer(L.mapbox.tileLayer('lucamoiana.i058i92l'), '20 KM', 1);
-
-function addLayer(layer, name, zIndex) {
-    layer
-        .setZIndex(zIndex)
-        .addTo(map);
-
-    // Create a simple layer switcher that toggles layers on
-    // and off.
-    var item = document.createElement('li');
-    var link = document.createElement('a');
-
-    link.href = '#';
-    link.className = 'active';
-    link.innerHTML = name;
-
-    link.onclick = function(e) {
-        e.preventDefault();
-        e.stopPropagation();
-
-        if (map.hasLayer(layer)) {
-            map.removeLayer(layer);
-            this.className = '';
-        } else {
-            map.addLayer(layer);
-            this.className = 'active';
-        }
-    };
-
-    item.appendChild(link);
-    ui.appendChild(item);
-}
+L.control.layers({
+    'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
+    'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
+}, {
+    'Bike Stations': L.mapbox.tileLayer('examples.bike-locations'),
+    'Bike Lanes': L.mapbox.tileLayer('examples.bike-lanes')
+}).addTo(map);
 </script>
 
 
