--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -19,7 +19,11 @@
 
 <div id='map'></div>
 <script>
-var map = L.map('map').setView([45.642, 8.954], 14); 
+var map = L.map('map').setView([45.642, 8.954], 14);
+var corto = L.mapbox.tileLayer('lucamoiana.i057npjm');
+var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
+
+L.layerGroup([ristori, corto])
 
 L.control.layers({
     'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
