--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -19,15 +19,15 @@
 
 <div id='map'></div>
 <script>
-var map = L.map('map').setView([45.642, 8.954], 14);
+var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14);
 var corto = L.mapbox.tileLayer('lucamoiana.i057npjm');
 var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
 
 L.layerGroup([ristori, corto])
 
 L.control.layers({
-    'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
-    'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
+    //'Base Map': L.mapbox.tileLayer('examples.map-zgrqqx0w').addTo(map),
+    //'Grey Map': L.mapbox.tileLayer('examples.map-20v6611k')
 }, {
     '6Km': L.mapbox.tileLayer('lucamoiana.i057npjm'),
     '14Km': L.mapbox.tileLayer('lucamoiana.i0588kkf'),
