--- a/mapboxtest.html
+++ b/mapboxtest.html
@@ -20,8 +20,10 @@
 <div id='map'></div>
 <script>
 var map = L.mapbox.map('map','lucamoiana.i2f5jfg2').setView([45.642, 8.954], 14);
-var corto = L.mapbox.tileLayer('lucamoiana.i057npjm');
 var ristori = L.mapbox.featureLayer('lucamoiana.i09fgicl');
+    var 6Km = L.mapbox.tileLayer('lucamoiana.i057npjm');
+    var 14Km = L.mapbox.tileLayer('lucamoiana.i0588kkf');
+    var 20Km = L.mapbox.tileLayer('lucamoiana.i058i92l');
 
 L.layerGroup([ristori, corto])
 
