--- a/weather.html
+++ b/weather.html
@@ -11,8 +11,8 @@
 <script type="text/javascript">
 function init() {
 	//Center of map
-	var lat = 45.660827; 
-	var lon = -74.0059731;
+	var lat = 45642; 
+	var lon = 8.954;
 	var lonlat = new OpenLayers.LonLat(lon, lat);
         var map = new OpenLayers.Map("basicMap");
 	// Create overlays
