--- a/weather.html
+++ b/weather.html
@@ -1,30 +1,30 @@
 <html>
 <head>
-<title>Open Weather Map</title>
-<script src="http://openlayers.org/api/OpenLayers.js"></script>
 <script src="http://openweathermap.org/js/OWM.OpenLayers.1.3.4.js" ></script>
 </head>
 <body  onload="init()">
-<div id="basicMap"></div>
+ <div id="basicMap"></div>
 </body>
-
 <script type="text/javascript">
 function init() {
-	//Center of map
-	var lat = 45642; 
-	var lon = 8.954;
-	var lonlat = new OpenLayers.LonLat(lon, lat);
-        var map = new OpenLayers.Map("basicMap");
-	// Create overlays
-	//  OSM
-        var mapnik = new OpenLayers.Layer.OSM();
-	// Stations
-	var stations = new OpenLayers.Layer.Vector.OWMStations("Stations");
-	// Current weather
-	var city = new OpenLayers.Layer.Vector.OWMWeather("Weather");
-	//Addind maps
-	map.addLayers([mapnik, stations, city]);
-	map.setCenter( lonlat, 10 );
-}
-</script>
-</html>
+//Center of map
+var lat = 40.7143528; // <--- some dynamic location
+var lon = -74.0059731; //<--- some dynamic location
+var map = new OpenLayers.Map("basicMap");
+var fromProjection = new OpenLayers.Projection("EPSG:3857");   // Transform from WGS 1984
+var toProjection   = new OpenLayers.Projection("EPSG:900913"); // to Spherical Mercator Projection
+var position       = new OpenLayers.LonLat(lon, lat).transform( fromProjection, toProjection);
+// Create overlays
+//  OSM
+var mapnik = new OpenLayers.Layer.OSM();
+// Stations
+var stations = new OpenLayers.Layer.Vector.OWMStations("Stations");
+// Current weather
+var city = new OpenLayers.Layer.Vector.OWMWeather("Weather");
+//Addind maps
+map.addLayers([mapnik, stations, city]);
+map.setCenter( position, 5 );
+ }
+
+ </script>
+ </html>
